--- a/Telstar Logistics Parcel Delivery Solution/appsettings.json
+++ b/Telstar Logistics Parcel Delivery Solution/appsettings.json
@@ -5,9 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": ""
-    
-  }
+  "AllowedHosts": "*"
+  
 }
