--- a/Telstar Logistics Parcel Delivery Solution/Telstar Logistics Parcel Delivery Solution.csproj
+++ b/Telstar Logistics Parcel Delivery Solution/Telstar Logistics Parcel Delivery Solution.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.11" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.2">
