Add price and duration calculations

--- a/Telstar Logistics Parcel Delivery Solution/Telstar Logistics Parcel Delivery Solution.csproj
+++ b/Telstar Logistics Parcel Delivery Solution/Telstar Logistics Parcel Delivery Solution.csproj
@@ -21,4 +21,8 @@
     <Folder Include="Calculations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Controllers\CategoryController.cs" />
+  </ItemGroup>
+
 </Project>
